--- a/receivetext.html
+++ b/receivetext.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta content="True" name="HandheldFriendly" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Receive Text</title>
 
     <script type="text/javascript" src="quiet.js"></script>
@@ -11,7 +16,7 @@
   </head>
   <body>
     <div class="hidden" data-quiet-profile-name="audible"></div>
-    <button type="button" onclick="onDOMLoad()">开始</button>
+    <button type="button" onclick="onDOMLoad();this.hidden=1">开始</button>
     <div class="wrapper">
       <header>
         <h1>Receive Text</h1>
